[package]
name = "killproc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.12", features = ["derive"] }
crossterm = "0.25.0"
execute = "0.2.13"
regex = "1.10.2"
terminal-menu = "3.0.0"
